--- a/src/styles/normalizer.scss
+++ b/src/styles/normalizer.scss
@@ -27,7 +27,6 @@ body {
 img,
 picture {
   max-width: 100%;
-  display: block;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
